# VEDYA.team-4-bugs

./: .replit  README.md  app.py  database.py  models.py  pyproject.toml
